--- a/exampleTasks.json
+++ b/exampleTasks.json
@@ -1,7 +1,7 @@
 [
     {
         "content": "Oznaczyć zadanie jako ukończone",
-        "done": true,
+        "done": false,
         "id": "LECqZvGDwH-XLbzMNOJkw"
     },
     {
